@@ -1,5 +1,9 @@
 2010-08-26  Jeff Hobbs  <jeffh@ActiveState.com>
 
+	* unix/tcl.m4: SHLIB_LD_LIBS='${LIBS}' for OSF1-V*.
+	Add /usr/lib64 to set of auto-search dirs. [Bug 1230554]
+	(SC_PATH_X): Correct syntax error when xincludes not found.
+
 	* win/Makefile.in (VC_MANIFEST_EMBED_DLL VC_MANIFEST_EMBED_EXE):
 	* win/configure, win/configure.in, win/tcl.m4: SC_EMBED_MANIFEST
 	macro and --enable-embedded-manifest configure arg added to
